--- a/project/helm/values-prod.yaml
+++ b/project/helm/values-prod.yaml
@@ -1,7 +1,17 @@
-namespace name: prod
-service port: 7111
-image pullPolicy: Always
-replicaCount: 5
+namespace:
+  name: prod
+
+service:
+  port: 7111
+
+image:
+  pullPolicy: Always
+  replicaCount: 5
+
 resources:
-requests: memory 128Mi and CPU 350m
-limits: memory 256Mi and CPU 500m
+  requests: 
+    memory: 128Mi
+    cpu: 350m
+  limits:  
+    memory: 256Mi
+    cpu: 500m
