--- a/project/helm/templates/service.yaml
+++ b/project/helm/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: sandbox
+  name: {{ .Values.namespace.name }}
   name: techtrends
 spec:
   type: {{ .Values.service.type }}
